feat: expose paper execution api
